[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="GUI" type="Control" parent="."]
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="HBoxContainer" parent="GUI/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 101.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="GUI/VBoxContainer/PanelContainer"]
margin_right = 510.0
margin_bottom = 101.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextInput" type="TextEdit" parent="GUI/VBoxContainer/PanelContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 503.0
margin_bottom = 94.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer2" type="PanelContainer" parent="GUI/VBoxContainer/PanelContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 101.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="GUI/VBoxContainer/PanelContainer/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 503.0
margin_bottom = 94.0
columns = 2

[node name="LabelDelim" type="Label" parent="GUI/VBoxContainer/PanelContainer/PanelContainer2/GridContainer"]
margin_top = 24.0
margin_right = 62.0
margin_bottom = 38.0
hint_tooltip = "The delimiter symbol used to differentiate separate values in a single row."
mouse_filter = 0
text = "delimiter"

[node name="DelimBox" type="ItemList" parent="GUI/VBoxContainer/PanelContainer/PanelContainer2/GridContainer"]
margin_left = 66.0
margin_right = 496.0
margin_bottom = 63.0
size_flags_horizontal = 3
items = [ "TAB", null, false, "comma", null, false, "full stop", null, false ]
auto_height = true

[node name="ButtonProcess" type="Button" parent="GUI/VBoxContainer/PanelContainer/PanelContainer2/GridContainer"]
margin_top = 67.0
margin_right = 62.0
margin_bottom = 87.0
text = "Process"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer2" type="PanelContainer" parent="GUI/VBoxContainer"]
margin_top = 105.0
margin_right = 1024.0
margin_bottom = 301.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/VBoxContainer/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 189.0

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/VBoxContainer/PanelContainer2/VBoxContainer"]
margin_right = 1010.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="LabelRows" type="Label" parent="GUI/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer"]
margin_right = 489.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Number of rows: "

[node name="LabelRowNumber" type="Label" parent="GUI/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer"]
margin_left = 493.0
margin_right = 493.0
margin_bottom = 14.0

[node name="LabelDivisor" type="Label" parent="GUI/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer"]
margin_left = 497.0
margin_right = 512.0
margin_bottom = 14.0
text = " | "

[node name="LabelColumns" type="Label" parent="GUI/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer"]
margin_left = 516.0
margin_right = 1006.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Number of columns: "

[node name="LabelColumnNumber" type="Label" parent="GUI/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer"]
margin_left = 1010.0
margin_right = 1010.0
margin_bottom = 14.0

[node name="HBoxContainer2" type="HBoxContainer" parent="GUI/VBoxContainer/PanelContainer2/VBoxContainer"]
margin_top = 18.0
margin_right = 1010.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LabelDataLabels" type="Label" parent="GUI/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 49.0
margin_bottom = 19.0
text = "Labels: "

[node name="LabelDataLabelNames" type="TextEdit" parent="GUI/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer2"]
margin_left = 53.0
margin_right = 1010.0
margin_bottom = 25.0
size_flags_horizontal = 3
readonly = true
wrap_enabled = true

[node name="HBoxContainer3" type="HBoxContainer" parent="GUI/VBoxContainer/PanelContainer2/VBoxContainer"]
margin_top = 47.0
margin_right = 1010.0
margin_bottom = 122.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.91

[node name="LabelXData" type="Label" parent="GUI/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer3"]
margin_top = 30.0
margin_right = 98.0
margin_bottom = 44.0
text = "x axis variable: "

[node name="ListXLabels" type="ItemList" parent="GUI/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer3"]
margin_left = 102.0
margin_right = 493.0
margin_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelDivisor2" type="Label" parent="GUI/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer3"]
margin_left = 497.0
margin_top = 30.0
margin_right = 512.0
margin_bottom = 44.0
text = " | "

[node name="LabelYData" type="Label" parent="GUI/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer3"]
margin_left = 516.0
margin_top = 30.0
margin_right = 614.0
margin_bottom = 44.0
text = "y axis variable: "

[node name="ListYLabels" type="ItemList" parent="GUI/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer3"]
margin_left = 618.0
margin_right = 1010.0
margin_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer4" type="HBoxContainer" parent="GUI/VBoxContainer/PanelContainer2/VBoxContainer"]
margin_top = 126.0
margin_right = 1010.0
margin_bottom = 150.0
size_flags_horizontal = 3

[node name="LabelLineWidth" type="Label" parent="GUI/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer4"]
margin_top = 5.0
margin_right = 122.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Line width: "

[node name="LabelLineWidthValue" type="LineEdit" parent="GUI/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer4"]
margin_left = 126.0
margin_right = 249.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "5"

[node name="LabelDivisor3" type="Label" parent="GUI/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer4"]
margin_left = 253.0
margin_top = 5.0
margin_right = 376.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = " | "

[node name="LabelLineColor" type="Label" parent="GUI/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer4"]
margin_left = 380.0
margin_top = 5.0
margin_right = 503.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Line color: "

[node name="LabelLineColorValue" type="ColorPickerButton" parent="GUI/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer4"]
margin_left = 507.0
margin_right = 629.0
margin_bottom = 24.0
size_flags_horizontal = 3
color = Color( 0.372549, 0.733333, 1, 1 )

[node name="LabelDivisor4" type="Label" parent="GUI/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer4"]
margin_left = 633.0
margin_top = 5.0
margin_right = 756.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = " | "

[node name="ButtonReset" type="Button" parent="GUI/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer4"]
margin_left = 760.0
margin_right = 883.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Reset plots"

[node name="ButtonPlot" type="Button" parent="GUI/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer4"]
margin_left = 887.0
margin_right = 1010.0
margin_bottom = 24.0
size_flags_horizontal = 3
disabled = true
text = "Plot"

[node name="HBoxContainer5" type="HBoxContainer" parent="GUI/VBoxContainer/PanelContainer2/VBoxContainer"]
margin_top = 154.0
margin_right = 1010.0
margin_bottom = 182.0
size_flags_horizontal = 3

[node name="LabelXRange" type="Label" parent="GUI/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer5"]
margin_top = 7.0
margin_right = 122.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "x axis range: "

[node name="PanelContainer2" type="PanelContainer" parent="GUI/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer5"]
margin_left = 126.0
margin_right = 249.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LabelXRangeValue" type="Label" parent="GUI/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer5/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 116.0
margin_bottom = 21.0
size_flags_horizontal = 3

[node name="LabelDivisor3" type="Label" parent="GUI/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer5"]
margin_left = 253.0
margin_top = 7.0
margin_right = 376.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = " | "

[node name="LabelYRange" type="Label" parent="GUI/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer5"]
margin_left = 380.0
margin_top = 7.0
margin_right = 502.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "y axis range:  "

[node name="PanelContainer3" type="PanelContainer" parent="GUI/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer5"]
margin_left = 506.0
margin_right = 629.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LabelYRangeValue" type="Label" parent="GUI/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer5/PanelContainer3"]
margin_left = 7.0
margin_top = 7.0
margin_right = 116.0
margin_bottom = 21.0
size_flags_horizontal = 3

[node name="LabelDivisor4" type="Label" parent="GUI/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer5"]
margin_left = 633.0
margin_top = 7.0
margin_right = 756.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = " | "

[node name="LabelCursorPosition" type="Label" parent="GUI/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer5"]
margin_left = 760.0
margin_top = 7.0
margin_right = 883.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "Cursor position: "

[node name="PanelContainer" type="PanelContainer" parent="GUI/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer5"]
margin_left = 887.0
margin_right = 1010.0
margin_bottom = 28.0
rect_min_size = Vector2( 123, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelCursor" type="Label" parent="GUI/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer5/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 116.0
margin_bottom = 21.0
size_flags_vertical = 5

[node name="PanelContainer3" type="PanelContainer" parent="GUI/VBoxContainer"]
margin_top = 305.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="Background" type="ColorRect" parent="GUI/VBoxContainer/PanelContainer3"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 288.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Graph" type="Node2D" parent="GUI/VBoxContainer/PanelContainer3/Background"]

[connection signal="pressed" from="GUI/VBoxContainer/PanelContainer/PanelContainer2/GridContainer/ButtonProcess" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="GUI/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer4/ButtonReset" to="." method="_on_ButtonReset_pressed"]
[connection signal="pressed" from="GUI/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer4/ButtonPlot" to="." method="_on_ButtonPlot_pressed"]
